fixed sign up, login form oversized, fixed mobile menu not showing toggle

--- a/imports/ui/stylesheets/_forms.scss
+++ b/imports/ui/stylesheets/_forms.scss
@@ -1,5 +1,5 @@
 .signup-wrapper {
-  width: 525px;
+  max-width: 525px;
 }
 
 body.login-page {
